<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.disney</groupId>
    <artifactId>apple-automation</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <hatter-api.version>2.0.24</hatter-api.version>
        <carina-core_version>1.2.7</carina-core_version>
        <carina-appcenter.version>1.2.7</carina-appcenter.version>
        <byte-buddy.version>1.14.5</byte-buddy.version>
        <zebrunner-agent.version>1.9.8</zebrunner-agent.version>
        <alice-client.version>1.0.56</alice-client.version>
        <jarvis-utils-version>1.0.18</jarvis-utils-version>
        <hora-validator-version>1.0.29</hora-validator-version>
        <disney-api-utils-version>3.7.0</disney-api-utils-version>
        <suite>helloDisney</suite>
    </properties>

    <repositories>
        <repository>
            <id>bamtech_releases</id>
            <name>Bamtech Releases</name>
            <url>https://artifactory.us-east-1.bamgrid.net/connected-maven-releases</url>
        </repository>
        <!--repository>
            <id>bamtech_snapshots</id>
            <name>Bamtech Snapshots</name>
            <url>https://artifactory.us-east-1.bamgrid.net/connected-maven-snapshots</url>
        </repository-->
        <repository>
            <id>qait_releases</id>
            <name>QAIT Releases</name>
            <url>https://artifactory.us-east-1.bamgrid.net/qait-maven</url>
        </repository>
        <repository>
            <id>apiregistry-maven</id>
            <name>apiregistry-maven</name>
            <url>https://artifactory.us-east-1.bamgrid.net/apiregistry-maven</url>
        </repository>
        <!--repository>
            <id>zebrunner_snapshots</id>
            <name>zebrunner Snapshots</name>
            <url>https://nexus.zebrunner.dev/repository/ce-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository-->
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>hulu-artifactory-mvn-releases</id>
            <name>hulu-mvn-releases</name>
            <url>https://artifactory.prod.hulu.com/artifactory/hulu-mvn-releases</url>
        </repository>
        <!--repository>
            <snapshots/>
            <id>hulu-artifactory-mvn-snapshots</id>
            <name>hulu-mvn-snapshots</name>
            <url>https://artifactory.prod.hulu.com/artifactory/hulu-mvn-snapshots</url>
        </repository-->
    </repositories>

    <dependencies>
 <dependency>
            <groupId>com.disney</groupId>
            <artifactId>hatter-api</artifactId>
            <version>${hatter-api.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.jersey</groupId>
                    <artifactId>jersey-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.hulu.sidekick</groupId>
                    <artifactId>locksmith</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.zebrunner</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.cucumber</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- temp until disney-api-utils fix it inside it's own classpath -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.13.0</version>
        </dependency>

        <dependency>
            <groupId>com.disney</groupId>
            <artifactId>disney-api-utils</artifactId>
            <version>${disney-api-utils-version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.testng</groupId>
                    <artifactId>testng</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-to-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.qaprosoft</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.zebrunner</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.grpc</groupId>
                    <artifactId>grpc-netty</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.disney</groupId>
                    <artifactId>Google-sheets-wrapper</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.zebrunner</groupId>
            <artifactId>carina-core</artifactId>
            <version>${carina-core_version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>commons-text</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.zebrunner</groupId>
            <artifactId>carina-appcenter</artifactId>
            <version>${carina-appcenter.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>
        <dependency>
            <groupId>com.disney.alice</groupId>
            <artifactId>alice-client</artifactId>
            <version>${alice-client.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.qaprosoft</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.zebrunner</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.testng</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <!-- to use zebrunner testng agent for webdriver sesssion(s) declaration KEEP THIS-->
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>${byte-buddy.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.26</version>
        </dependency>
        <dependency>
            <groupId>com.disney.hora</groupId>
            <artifactId>hora-validator</artifactId>
            <version>${hora-validator-version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.qaprosoft</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.zebrunner</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.disney.jarvisutils</groupId>
            <artifactId>jarvis-utils</artifactId>
            <version>${jarvis-utils-version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.qaprosoft</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.zebrunner</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.disney</groupId>
                    <artifactId>hatter-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactItems>
                        <artifactItem>
                            <groupId>com.zebrunner</groupId>
                            <artifactId>agent-core</artifactId>
                            <version>${zebrunner-agent.version}</version>
                            <outputDirectory>${project.build.directory}/agent</outputDirectory>
                            <destFileName>zebrunner-core-agent.jar</destFileName>
                        </artifactItem>
                    </artifactItems>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>-javaagent:${project.build.directory}/agent/zebrunner-core-agent.jar</argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <suiteXmlFiles>
                        <suiteXmlFile>${project.build.directory}/test-classes/TestNG_suites/${suite}.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <forkCount>2.5C</forkCount>
                    <reuseForks>true</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
